DTGB-555: Fixed `aria-hidden` attribute on mobile

--- a/components/41-organisms/filter/_filter.scss
+++ b/components/41-organisms/filter/_filter.scss
@@ -13,7 +13,7 @@
     }
 
     &.visible {
-      @include desktop-and-below {
+      @include breakpoint(max-width 768px) {
         padding: 0;
         visibility: visible;
 
